fix(scroll): delete horizontal scroll

--- a/src/components/layout/style.scss
+++ b/src/components/layout/style.scss
@@ -1,21 +1,7 @@
 @use 'config' as *;
 
 .layout {
-	overflow-x: hidden;
-
 	&_header {
 		@include container();
-	}
-
-	&_main {
-		// f
-	}
-
-	&_aside {
-		// f
-	}
-
-	&_footer {
-		// f
 	}
 }
