--- a/src/components/main/style.scss
+++ b/src/components/main/style.scss
@@ -1,5 +1,5 @@
 @use 'config' as *;
 
 .main {
-	// keep
+	overflow-x: hidden;
 }
